# distributedcl

./: Makefile.am  README  autogen.sh  configure.ac
doc/: OpenCLgrid.pt_BR.odt  analysis.gaphor
doc/CL/: cl_khr_icd.txt
doc/CL/cl.hpp-docs/: annotated.html  cl_8hpp.html  cl_8hpp_source.html  classcl_1_1_buffer-members.html  classcl_1_1_buffer.html  classcl_1_1_command_queue-members.html  classcl_1_1_command_queue.html  classcl_1_1_context-members.html  classcl_1_1_context.html  classcl_1_1_device-members.html  classcl_1_1_device.html  classcl_1_1_event-members.html  classcl_1_1_event.html  classcl_1_1_image-members.html  classcl_1_1_image.html  classcl_1_1_image2_d-members.html  classcl_1_1_image2_d.html  classcl_1_1_image3_d-members.html  classcl_1_1_image3_d.html  classcl_1_1_kernel-members.html  classcl_1_1_kernel.html  classcl_1_1_kernel_functor-members.html  classcl_1_1_kernel_functor.html  classcl_1_1_memory-members.html  classcl_1_1_memory.html  classcl_1_1_n_d_range-members.html  classcl_1_1_n_d_range.html  classcl_1_1_platform-members.html  classcl_1_1_platform.html  classcl_1_1_program-members.html  classcl_1_1_program.html  classcl_1_1_sampler-members.html  classcl_1_1_sampler.html  classcl_1_1detail_1_1_wrapper-members.html  classcl_1_1detail_1_1_wrapper.html  classcl_1_1string-members.html  classcl_1_1string.html  (+50 more)
inc/CL/: cl.hpp  cl_gl_ext.h
lib/64/: libudt.so.4.7a
src/: DistributedCL.sln  opencl_library.cpp  opencl_library.h  openclgrid.sln
src/CLInfo/: CLInfo.cpp  CLInfo.cproj  CLinfo.vcxproj  CLinfo.vcxproj.filters  Makefile.am
src/DCLModel/: DCLModel.modelproj  Packages.classdiagram  Packages.classdiagram.layout
src/HelloCL/: HelloCL.cpp  HelloCL.cproj  HelloCL.vcxproj  HelloCL.vcxproj.filters  HelloCL_Kernels.cl
src/MatrixMulDouble/: MatrixMulDouble.cpp  MatrixMulDouble.hpp  MatrixMulDouble.vcxproj  MatrixMulDouble.vcxproj.filters  MatrixMulDouble_Kernels.cl
src/clbench/: Makefile.am  clbench.cpp  clbench.h  clbench.vcxproj  clbench.vcxproj.filters  main.cpp
src/distributedcld/: Makefile.am  distributedcld.vcxproj  main.cpp
src/libdistributedcl/: Makefile.am  distributedcl_internal.h  libdistributedcl.cproj  libdistributedcl.vcxproj  libdistributedcl.vcxproj.filters  library_exception.h  main.cpp  main.h
src/libdistributedcl/client/: client.cpp  client.h  client_session.h  session.cpp  session.h  session_manager.cpp  session_manager.h
src/libdistributedcl/composite/: composite_command_queue.h  composite_context.cpp  composite_context.h  composite_device.h  composite_event.cpp  composite_event.h  composite_kernel.cpp  composite_kernel.h  composite_memory.cpp  composite_memory.h  composite_object.h  composite_platform.cpp  composite_platform.h  composite_program.cpp  composite_program.h  composite_sampler.h  icd_object.cpp  icd_object.h  opencl_composite.cpp  opencl_composite.h
src/libdistributedcl/config/: client_config.h  common_config.cpp  common_config.h  dcld.conf  libdcl.conf  server_config.h
src/libdistributedcl/info/: command_queue_info.h  context_info.h  dcl_objects.h  device_info.h  event_info.h  icd_object.h  kernel_info.h  memory_info.h  object_manager.h  opencl_functions.h  platform_info.h  program_info.h  sampler_info.h
src/libdistributedcl/message/: message.cpp  message.h  msg_command_queue.cpp  msg_command_queue.h  msg_context.cpp  msg_context.h  msg_device.cpp  msg_device.h  msg_event.cpp  msg_event.h  msg_internal.cpp  msg_internal.h  msg_kernel.cpp  msg_kernel.h  msg_memory.cpp  msg_memory.h  msg_program.cpp  msg_program.h  msg_sampler.cpp  msg_sampler.h  packet.cpp  packet.h
src/libdistributedcl/netserver/: message_dispatcher.h  server_platform.cpp  server_platform.h  server_session.h
src/libdistributedcl/network/: client_session.h  message_dispatcher.cpp  message_dispatcher.h  platform.h  server.h  server_session.cpp  server_session.h  session.h  session_manager.cpp  session_manager.h  tcp_transport.h
src/libdistributedcl/remote/: icd_object_manager.cpp  icd_object_manager.h  object_manager.h  remote_command_queue.cpp  remote_command_queue.h  remote_context.cpp  remote_context.h  remote_device.cpp  remote_device.h  remote_event.cpp  remote_event.h  remote_kernel.cpp  remote_kernel.h  remote_memory.cpp  remote_memory.h  remote_object.h  remote_opencl.cpp  remote_opencl.h  remote_platform.cpp  remote_platform.h  remote_program.cpp  remote_program.h  remote_sampler.h
src/libdistributedcl/server/: async_server_command.h  message_dispatcher.cpp  message_dispatcher.h  server.h  server_command.cpp  server_command.h  server_command_queue.cpp  server_command_queue.h  server_context.cpp  server_context.h  server_event.cpp  server_event.h  server_kernel.cpp  server_kernel.h  server_memory.cpp  server_memory.h  server_platform.cpp  server_platform.h  server_program.cpp  server_program.h  server_sampler.cpp  server_sampler.h  server_session.h
src/libdistributedcl/single/: command_queue.cpp  command_queue.h  context.cpp  context.h  device.cpp  device.h  event.cpp  event.h  kernel.cpp  kernel.h  memory.cpp  memory.h  opencl_library.cpp  opencl_library.h  opencl_single.cpp  opencl_single.h  platform.cpp  platform.h  program.cpp  program.h  sampler.cpp  sampler.h  single_object.h
src/libdistributedcl_test/: generic_memory_test.cpp  generic_memory_test.h  libdistributedcl_test.vcxproj  libdistributedcl_test.vcxproj.filters  main.cpp  opencl_memory_test.cpp  opencl_memory_test.h  remote_memory_test.cpp  remote_memory_test.h
src/libopencl/: Makefile.am  libopencl.def  libopencl.vcxproj  libopencl.vcxproj.filters  local_session.h  main.cpp
src/libopencl/icd/: icd_object_manager.cpp  icd_object_manager.h
src/libopencl/interface/: cl_command_queue.cpp  cl_context.cpp  cl_device.cpp  cl_event.cpp  cl_extension.cpp  cl_kernel.cpp  cl_memory.cpp  cl_platform.cpp  cl_program.cpp  cl_sampler.cpp  cl_utils.cpp  cl_utils.h
src/ocgComposite/: ocgComposite.cproj
src/ocg_log/: library_exception.h  ocg_log.cproj  ocg_log.vcxproj  ocg_log.vcxproj.filters  ocg_main.cpp  opencl_library.cpp  opencl_library.h
(+53 files in other folders)
