noinst_LTLIBRARIES = libdistributedcl.la
libdistributedcl_la_CPPFLAGS = $(BOOST_CPPFLAGS) -I$(top_srcdir)/inc
libdistributedcl_la_LDFLAGS = -ldl
libdistributedcl_la_SOURCES = \
distributedcl_internal.h \
library_exception.h \
composite/composite_context.cpp \
composite/composite_event.cpp \
composite/composite_kernel.cpp \
composite/composite_memory.cpp \
composite/composite_platform.cpp \
composite/composite_program.cpp \
composite/opencl_composite.cpp \
message/message.cpp \
message/msg_command_queue.cpp \
message/msg_context.cpp \
message/msg_device.cpp \
message/msg_event.cpp \
message/msg_internal.cpp \
message/msg_kernel.cpp \
message/msg_memory.cpp \
message/msg_program.cpp \
message/packet.cpp \
network/message_dispatcher.cpp \
network/session_manager.cpp \
remote/remote_command_queue.cpp \
remote/remote_context.cpp \
remote/remote_device.cpp \
remote/remote_event.cpp \
remote/remote_kernel.cpp \
remote/remote_memory.cpp \
remote/remote_platform.cpp \
remote/remote_program.cpp \
server/server_command_queue.cpp \
server/server_context.cpp \
server/server_event.cpp \
server/server_kernel.cpp \
server/server_memory.cpp \
server/server_platform.cpp \
server/server_program.cpp \
single/command_queue.cpp \
single/context.cpp \
single/device.cpp \
single/event.cpp \
single/kernel.cpp \
single/memory.cpp \
single/opencl_library.cpp \
single/opencl_single.cpp \
single/platform.cpp \
single/program.cpp \
composite/composite_command_queue.h \
composite/composite_context.h \
composite/composite_device.h \
composite/composite_event.h \
composite/composite_kernel.h \
composite/composite_memory.h \
composite/composite_object.h \
composite/composite_platform.h \
composite/composite_program.h \
composite/opencl_composite.h \
info/command_queue_info.h \
info/context_info.h \
info/dcl_objects.h \
info/device_info.h \
info/event_info.h \
info/icd_object.h \
info/kernel_info.h \
info/memory_info.h \
info/object_manager.h \
info/opencl_functions.h \
info/platform_info.h \
info/program_info.h \
message/message.h \
message/msg_command_queue.h \
message/msg_context.h \
message/msg_device.h \
message/msg_event.h \
message/msg_internal.h \
message/msg_kernel.h \
message/msg_memory.h \
message/msg_program.h \
message/packet.h \
network/client_session.h \
network/message_dispatcher.h \
network/platform.h \
network/server.h \
network/server_session.h \
network/session.h \
network/session_manager.h \
network/tcp_transport.h \
remote/remote_command_queue.h \
remote/remote_context.h \
remote/remote_device.h \
remote/remote_event.h \
remote/remote_kernel.h \
remote/remote_memory.h \
remote/remote_object.h \
remote/remote_opencl.h \
remote/remote_platform.h \
remote/remote_program.h \
server/server_command.h \
server/server_command_queue.h \
server/server_context.h \
server/server_event.h \
server/server_kernel.h \
server/server_memory.h \
server/server_platform.h \
server/server_program.h \
single/command_queue.h \
single/context.h \
single/device.h \
single/event.h \
single/kernel.h \
single/memory.h \
single/opencl_library.h \
single/opencl_single.h \
single/platform.h \
single/program.h \
single/single_object.h
